# spbusearch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_base.py  docker-compose.yaml  ocr_files.py  parser.py  pyproject.toml
.github/workflows/: main.yml
docker_test/: compose.yaml
src/api/: main.py
src/cli/: .golangci.yaml  cli.go  go.mod  go.sum  main.go
src/cli/config/: config.go
src/cli/model/: file.go
src/cli/service/: service.go
src/lib/: consts.py  data.py  data_base.py  databases.py  ocr_files.py  parser.py  setup.py
src/web/templates/: search_result.html
web/: .env  .env.example  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  vite.config.ts
web/nginx/: nginx.conf
web/src/: App.tsx  types.ts
web/src/components/: ResultCard.tsx
