[tool.poetry]
name = "spbusearch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.31.0"
docx = "^0.2.4"
fitz = "^0.0.1.dev2"
ocrmypdf = "^15.4.3"
traits = "^6.4.3"
pymysql = "^1.1.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 100
