[tool.poetry]
name = "spbusearch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
bs4 = "^0.0.1"
requests = "^2.31.0"
pymysql = "^1.1.0"
python-docx = "^1.1.0"
pymupdf = "^1.23.7"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
frozendict = "^2.4.4"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 100
